@@ -5,3 +5,4 @@
 from .remove_chartchunk import remove_borders
 from .scatter import category_scatter
 from .stacked_barplot import stacked_barplot
+from .enrichment_plot import enrichment_plot
